--- a/site/RoomDraw/src/app/nav-bar/nav-bar.component.css
+++ b/site/RoomDraw/src/app/nav-bar/nav-bar.component.css
@@ -11,7 +11,10 @@
 	display: block;
 	color: #f2f2f2;
 	text-align: center;
-	padding: 1%;
+	padding-top: 1%;
+	padding-left: 1%;
+	padding-right: 1%;
+	padding-bottom: 0.7%;
 	text-decoration: none;
 }
 
